# mri_gist

./: .gitignore  README.md  pyproject.toml
02_tests/: test_midway.py  verify_conversion.py
contrastive/: oneclass.py  quicktest.py  readme.md
docs/: user_guide.md
mri_gist/: __main__.py  cli.py  config.py
mri_gist/backend/: README.md  __init__.py  analytics.py  server.py
mri_gist/conversion/: conversion.md  formats.py
mri_gist/detection/: hemisphere.py
mri_gist/fractal/: __init__.py  analysis.py  core.py  itk_LUT.txt  labels.py
mri_gist/registration/: __init__.py  core.py  midway.py
mri_gist/segmentation/: synthseg.py
mri_gist/training/: domain.ipynb  synthmorph_affine.ipynb
mri_gist/utils/: logging.py
mri_gist/visualization/: server.py
mri_gist/visualization/static/: index.html
old/: README.md  requirements.txt
old/code/3d/: densenet_training_array.ipynb  monai_101.ipynb  monai_201.ipynb
old/code/dhcp_register/: register_log.txt
old/code/scripts/: hemi_separation.py  notebook.ipynb  readme.md  register.ipynb  register_dhcp.py  synthseg_dhcp.py
old/code/siamese_torch/: 0_data_load.ipynb  1_data_save.ipynb  VGG_eval_all.out  check_dataset.ipynb  create_dataset.ipynb  dataplay.ipynb  debug_model.ipynb  debug_models_specs.py  inference.ipynb  inference2.ipynb  noise.ipynb  readme_siamese.md  siamese_torch.ipynb  siamese_torch2.py  siamese_torch_test.py  test_loader.ipynb  test_noise.py  utils.py
old/code/vol_vis/: convert.py  package-lock.json  readme-md  (+1 more)
old/data/: 1-data.ipynb  2-test_segs.ipynb  utils.py
validation/: benchmark.py
(+41 files in other folders)
